--- a/api/connector/src/main/resources/application.properties
+++ b/api/connector/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${USERNAME}
+spring.datasource.username=${USR_NAME}
 spring.datasource.password=${PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
