--- a/api/connector/src/main/resources/application.properties
+++ b/api/connector/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=${USR_NAME}
 spring.datasource.password=${PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.show-sql-true
+spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 app.version=1.0.0
