--- a/frontend/FullStack/package.json
+++ b/frontend/FullStack/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@swimlane/ngx-charts": "^18.0.1",
+    "date-fns": "^2.22.1",
+    "ngx-gauge": "^3.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
